MODSOURMAN-1260 - The 'The 004 tag of the Holdings doesn't has a link to the Bibliographic record' error message is not displayed on JSON data after importing file (#1002)